force-app/main/default/objects/FPC_Log__c/FPC_Log__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>LG-{0000000}</displayFormat>
        <label>Nombre de Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>