force-app/main/default/objects/FPC_Log__c/fields/FPC_Error__c.field-meta.xml
<CustomField>
    <fullName>FPC_Error__c</fullName>
    <label>Error SF</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>