force-app/main/default/objects/FPC_Log__c/fields/FPC_Grupo__c.field-meta.xml
<CustomField>
    <fullName>FPC_Grupo__c</fullName>
    <label>Grupo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>