force-app/main/default/objects/FPC_Log__c/fields/FPC_Request__c.field-meta.xml
<CustomField>
    <fullName>FPC_Request__c</fullName>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>