force-app/main/default/objects/FPC_Log__c/fields/FPC_Response__c.field-meta.xml
<CustomField>
    <fullName>FPC_Response__c</fullName>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>