force-app/main/default/objects/FPC_Log__c/fields/FPC_Resultado__c.field-meta.xml
<CustomField>
    <fullName>FPC_Resultado__c</fullName>
    <label>Resultado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>