force-app/main/default/objects/FPC_Log__c/fields/FPC_Servicio__c.field-meta.xml
<CustomField>
    <fullName>FPC_Servicio__c</fullName>
    <label>Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDC Masivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>