force-app/main/default/objects/FPC_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FPC_Servicio__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FPC_Grupo__c</columns>
    <columns>FPC_Resultado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>